--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  google_generative_ai: ^0.4.4
+  flutter_linkify: ^6.0.0
+  supabase_flutter: ^2.5.0
+  url_launcher: ^6.2.5
+  google_generative_ai: ^0.4.4  
   file_picker: ^8.0.0
   syncfusion_flutter_pdf: ^26.1.42
   cupertino_icons: ^1.0.6
   intl: ^0.19.0
-
+  http : ^1.2.0 
 
 dev_dependencies:
   flutter_test: 
